--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typescript": "4.4.2"
   },
   "dependencies": {
-    "sqlite3": "5.0.2"
+    "sqlite3": "5.0.2",
+    "puppeteer": "^10.2.0"
   }
 }
