--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "devDependencies": {
     "@types/node": "^16.9.0",
     "prettier": "2.4.0",
-    "typescript": "4.4.2"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   },
   "dependencies": {
     "sqlite3": "5.0.2",
