--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "outDir": "./dist",
     "allowJs": true,
     "target": "es2021",
-    "types": ["node"]
+    "types": ["node"],
+    "lib": ["es6"]
   },
   "include": ["./src/**/*"]
 }
