--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "scripts": {
-    "build": "tsc"
+    "build": "tsup src/app2.ts",
+    "dev": "tsup src/app2.ts --watch --onSuccess \"node dist/app2.js\""
   },
   "devDependencies": {
     "@types/node": "^16.9.0",
+    "@types/puppeteer": "^5.4.4",
+    "@types/sqlite3": "^3.1.7",
     "prettier": "^2.4.1",
-    "ts-node": "^10.2.1",
+    "tsup": "^5.2.0",
     "typescript": "^4.4.2"
   },
   "dependencies": {
-    "sqlite3": "5.0.2",
-    "puppeteer": "^10.2.0"
+    "puppeteer": "^10.2.0",
+    "sqlite3": "5.0.2"
   }
 }
